fix the cross on video player and try to fix the scroll on mobile

--- a/src/components/templates/photographersPage/Photographers.module.scss
+++ b/src/components/templates/photographersPage/Photographers.module.scss
@@ -2,7 +2,7 @@
 
 .photographerContainer {
     position: relative;
-    height: 100vh;
+    height: 100dvh;
 
     .textContainer {
         position: fixed;
