--- a/src/components/templates/projectDetails/ProjectDetails.module.scss
+++ b/src/components/templates/projectDetails/ProjectDetails.module.scss
@@ -4,7 +4,7 @@
     transform: none !important;
     @media screen and (min-width: $desktop) {
         overflow: hidden;
-        height: 100vh;
+        height: 100dvh;
     }
 
     .horizontalScroll {
